<resources>
    <string name="app_name">MariamCalculator</string>
    <string name="hint_num1">Enter first number</string>
    <string name="hint_num2">Enter second number</string>
    <string name="hint_answer">Answer</string>
    <string name="button_add">Add</string>
    <string name="button_subtract">Subtract</string>
    <string name="button_multiply">Multiply</string>
    <string name="button_divide">Divide</string>
    <string name="graphic_name_desc">Mariam Name Graphic</string>
</resources>
